<resources>
    <string name="app_name">Start.Ng App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Basic Information</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="lblFullName">Full Name:</string>
    <string name="txtName">MBAYA Emmanuel Baldwin</string>
    <string name="lblUserName">Slack Username:</string>
    <string name="txtUserName">emmaraj</string>
    <string name="lblEmail">Start.ng Email :</string>
    <string name="txtEmailAddress">emmanuelbaldwin@gmail.com</string>
    <string name="lblTracks">My Tracks:</string>
    <string name="txtTracks">Backend &amp; Mobile</string>
    <string name="lblCourse">Courses:</string>
    <string name="txtCourse">Java &amp; C#</string>
    <string name="lblReason">Why Start.ng:</string>
    <string name="txtReason">I want to be a world class developer</string>
    <string name="my_logo">My Logo</string>

</resources>
